--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Piškvorky</h1>
+    <div class="container">
+      <img class="obrazek" src="podklady/uvodni.jpg" alt="Čtyřlístky" />
+      <div class="text">
+        <h1>Piškvorky</h1>
+        <p>
+          Piškvorky jsou velmi oblíbená společenská hra pro dva hráče. Obvykle
+          se hraje s tužkou a čtverečkovaným papírem. Nyní můžete využít naši
+          skvělou aplikaci, takže už nepotřebujete ani tužku a nemusíte hledat
+          čtverečkovaný papír. Přejeme vám hodně zábavy!
+        </p>
+      </div>
+      <button class="button1">Pravidla</button>
+      <button class="button2">Začít hrát</button>
+    </div>
   </body>
 </html>
