--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
           čtverečkovaný papír. Přejeme vám hodně zábavy!
         </p>
       </div>
-      <button class="button1">Pravidla</button>
-      <button class="button2">Začít hrát</button>
+      <a
+        class="button1"
+        href="https://czechitas-podklady.cz/Piskvorky-pravidla/"
+      >
+        Pravidla
+      </a>
+      <a class="button2" href="index.html">Začít hrát</a>
     </div>
   </body>
 </html>
