--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Piškvorky</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -24,7 +24,7 @@
       >
         Pravidla
       </a>
-      <a class="button2" href="index.html">Začít hrát</a>
+      <a class="button2" href="hra.html">Začít hrát</a>
     </div>
   </body>
 </html>
