--- a/hra.html
+++ b/hra.html
@@ -19,129 +19,129 @@
           <img class="restart" src="podklady/restart.svg" alt="restart" />
         </div>
       </div>
-        <table>
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-        </table>
+      <table>
+        <tr>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+        </tr>
+        <tr></tr>
+        <tr>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+        </tr>
+        <tr>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+        </tr>
+        <tr>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+        </tr>
+        <tr>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+        </tr>
+        <tr>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+        </tr>
+        <tr>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+        </tr>
+        <tr>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+        </tr>
+        <tr>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+        </tr>
+        <tr>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+          <td><button class="cell"></button></td>
+        </tr>
+      </table>
     </div>
   </body>
 </html>
