--- a/hra.html
+++ b/hra.html
@@ -15,8 +15,12 @@
           <img class="kolecko" src="podklady/circle.svg" alt="kolečko" />
         </div>
         <div class="homearestart">
-          <img class="home" src="podklady/home.svg" alt="home" />
-          <img class="restart" src="podklady/restart.svg" alt="restart" />
+          <a href="index.html">
+            <img class="home" src="podklady/home.svg" alt="home"
+          /></a>
+          <a href="hra.html">
+            <img class="restart" src="podklady/restart.svg" alt="restart"
+          /></a>
         </div>
       </div>
       <table>
