--- a/hra.html
+++ b/hra.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hra</title>
+    <script type="module" src="index.js"></script>
     <link rel="stylesheet" href="hra_style.css" />
   </head>
   <body>
