--- a/hra.html
+++ b/hra.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hra</title>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="hra.js"></script>
     <link rel="stylesheet" href="hra_style.css" />
   </head>
   <body>
@@ -13,7 +13,7 @@
       <div class="podnadpisem">
         <div class="hraje">
           <p>HRAJE:</p>
-          <img class="kolecko" src="podklady/circle.svg" alt="kolečko" />
+          <img class="kolecko" src="podklady/circle_white.svg" alt="kolečko" />
         </div>
         <div class="homearestart">
           <a href="index.html">
