--- a/hra.html
+++ b/hra.html
@@ -13,7 +13,7 @@
       <div class="podnadpisem">
         <div class="hraje">
           <p>HRAJE:</p>
-          <img class="kolecko" src="podklady/circle_white.svg" alt="kolečko" />
+          <img class="player" src="podklady/cross_white.svg" alt="player" />
         </div>
         <div class="homearestart">
           <a href="index.html">
@@ -37,7 +37,6 @@
           <td><button class="cell"></button></td>
           <td><button class="cell"></button></td>
         </tr>
-        <tr></tr>
         <tr>
           <td><button class="cell"></button></td>
           <td><button class="cell"></button></td>
